--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cosmic Infinity • Tugas Sistem Operasi</title>
+  <title>Dashboard Os</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -169,7 +169,7 @@
   <!-- loader -->
   <div id="loader" role="status" aria-live="polite">
     <div class="loaderOrb" aria-hidden="true"></div>
-    <div class="loaderTxt">COSMIC INFINITY UI</div>
+    <div class="loaderTxt">Sabar Ya...</div>
     <div style="margin-top:8px; color:rgba(200,255,255,0.7)">Menginisialisasi…</div>
   </div>
 
@@ -186,8 +186,8 @@
 
         <!-- left -->
         <div class="left" style="padding-right:6px">
-          <h1>UAS • Sistem Operasi</h1>
-          <div class="subtitle">Cosmic Infinity — procedural nebula & ambient sound</div>
+          <h1>Selamat Datang</h1>
+          <div class="subtitle">:)</div>
 
           <div class="meta">
             <div class="card"><div class="label">Nama</div><div class="value">Hamid Albar</div></div>
@@ -272,7 +272,7 @@
         </div>
         <div class="modal-body text-center">
           <strong>ITSNU Pekalongan</strong><br>
-          Institut Terpadu Studium Nusantara
+          Institut Teknologi dan Sains Nahdlatul Ulama Pekalongan
         </div>
       </div>
     </div>
