Remove text from created date section

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <button class="btn-neo" id="btnUAS" data-link="https://thingforall.github.io/uas-os-page/">➤ Buka Tugas UAS</button>
           </div>
 
-          <div style="margin-top:16px" class="small">Dibuat pada: <span id="created"></span></div>
+          <div style="margin-top:16px" class="small">: <span id="created"></span></div>
         </div>
 
         <!-- right -->
